Remove unnecessary cell

--- a/simple_ab_test_to_check_conv_significance.ipynb
+++ b/simple_ab_test_to_check_conv_significance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "6494b252",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "6af5d465",
    "metadata": {},
    "outputs": [],
@@ -26,31 +26,15 @@
     "\n",
     "    se_a = math.sqrt(conv_rate_a * (1 - conv_rate_a) / vistors_a)\n",
     "    se_b = math.sqrt(conv_rate_b * (1 - conv_rate_b) / visitors_b)\n",
-    "    \n",
-    "    z_score = ((conv_rate_b - conv_rate_a) / math.sqrt(se_a**2 + se_b**2))\n",
-    "    \n",
-    "    return stats.norm.sf(abs(z_score)) * 2\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "33bec98e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vals\n",
-    "a_conv = 1250\n",
-    "a_n = 12000\n",
     "\n",
-    "b_conv = 1500\n",
-    "b_n = 15000"
+    "    z_score = ((conv_rate_b - conv_rate_a) / math.sqrt(se_a**2 + se_b**2))\n",
+    "\n",
+    "    return stats.norm.sf(abs(z_score)) * 2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "22a59870",
    "metadata": {},
    "outputs": [],
@@ -60,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "8da3ea30",
    "metadata": {},
    "outputs": [
