--- a/simple_ab_test_to_check_conv_significance.ipynb
+++ b/simple_ab_test_to_check_conv_significance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6494b252",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6af5d465",
    "metadata": {},
    "outputs": [],
    "source": [
     "def significance_test(vistors_a, visitors_b, conv_a, conv_b):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    -----------\n",
+    "    visitors_a: int\n",
+    "      Count of visitors in treatement A\n",
+    "    visitors_b: int\n",
+    "      Count of visitors in treatment B\n",
+    "    conv_a: int\n",
+    "      Count of users who converted in treament A\n",
+    "    conb_b: int\n",
+    "      Count of users who converted in treatment B\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float64\n",
+    "      The p-value\n",
+    "\n",
+    "    \"\"\"\n",
     "    conv_rate_a = conv_a / vistors_a\n",
     "    conv_rate_b = conv_b / visitors_b\n",
     "\n",
@@ -34,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "22a59870",
    "metadata": {},
    "outputs": [],
@@ -44,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "8da3ea30",
    "metadata": {},
    "outputs": [
